--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On Beginnings</title>
+    <title>Stella's Website</title>
 </head>
 <body>
-    Welcomeeeeeeee
+    <h1>Welcome to Core 2: Interaction!</h1>
 </body>
 </html>
