--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stella's Website</title>
+    <title>Project 1</title>
 </head>
 <body>
-    <h1>Welcome to Core 2: Interaction!</h1>
+    <h1>This is my project 1!</h1>
+    <ul>
+        <li><a href="./p1/index.html">Project 1</a></li>
+    </ul>
+    
 </body>
 </html>
