--- a/p1/index.html
+++ b/p1/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>This is my project 1!</h1>
-    <ul>
-        <li><a href="./</li>
-    </ul>
+    <a href="../index.html"><button>Class Website</button></a>
     
 </body>
 </html>
