--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Website</title>
+    <title>Class Web</title>
 </head>
 <body>
-    <h1>This is my project 1!</h1>
+    <h1>Stella Zheng</h1>
+    <h2>This is my project 1!</h2>
     <ul>
         <li><a href="./p1/index.html">Project 1</a></li>
+    </ul>
+    <h2>This is my project 2!</h2>
+    <ul>
+        <li><a href="./p2/index.html">Project 2</a></li>
+    </ul>
+    <h2>This is my project 3!</h2>
+    <ul>
+        <li><a href="./p3/index.html">Project 3</a></li>
     </ul>
     
 </body>
