--- a/p3/index.html
+++ b/p3/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On Punctuation/title>
+    <title>Project 1</title>
 </head>
 <body>
-    <h1>This is my project 1!</h1>
+    <h1>This is my project 3!</h1>
     <a href="../index.html"><button>Class Website</button></a>
     
 </body>
