homepage appearance update

--- a/p1/index.html
+++ b/p1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On Punctuation/title>
+    <title>On Punctuation</title>
 </head>
 <body>
     <h1>This is my project 1!</h1>
