--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
        <path fill="#FFFFFF" d="M375.74,299.54c0,0,5.43-50.55,56.24-67.22C431.98,232.32,388.54,258.55,375.74,299.54z"/>
    </g>
 </g>
-<a href="./p1/index.html">
+<a href="./p1/index.html" title="link to project 1">
 <g id="tulip">
    <g>
        <polygon fill="#DEE9CA" stroke="#D2DDBC" stroke-miterlimit="10" points="330.42,667.7 412.59,897.49 433.3,890.81 351.76,656.78 
@@ -156,7 +156,7 @@
    </g>
 </g>
 </a>
-<a href="./p3/index.html">
+<a href="./p3/index.html" title="link to project 3">
 <g id="tulip3">
    <g>
        <g>
@@ -179,7 +179,7 @@
    </g>
 </g>
 </a>
-<a href="./p2/index.html">
+<a href="./p2/index.html" title="link to project 2">
 <g id="tulip2">
     
    <polygon fill="#DBC0BA" points="369.15,551 404.87,568.55 401.95,571.86 	"/>
