--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     viewBox="0 0 936 1368" enable-background="new 0 0 936 1368" xml:space="preserve" aria-hidden="true">
     <title>illustration of a girl holding a bouquet of three tulips</title>
+<g id="stella" title="stella zheng">
+        <rect x="109.09" y="43.32" fill="none" width="717.82" height="148.14"/>
+        <text transform="matrix(1 0 0 1 159.7619 127.1088)"><tspan x="0" y="0" font-family="'SinhalaMN'" font-size="111px">stella </tspan><tspan x="305.2" y="0" font-family="'SinhalaMN'" font-size="111px">z</tspan><tspan x="364.03" y="0" font-family="'SinhalaMN'" font-size="111px" letter-spacing="-2">heng</tspan></text>
+        <rect x="1243.49" y="616.72" fill="none" width="2.59" height="0"/>
+     </g>
 <g id="base">
    <path d="M374.23,392.23l8.06,3.44c0,0,10.09,40.6,36.99,49.5c-4.47-5.42-24.66-36.28-5.17-27.63c0,0,27.97,15.74,37.89,14.02
        l0.32,21.57c0,0-22.65,16.24-57.29-2.08c0,0-10.62,15.81-59.35-3.48C333.38,447.34,368.79,454.22,374.23,392.23z"/>
@@ -216,11 +221,7 @@
        <polyline fill="#FFFFFF" stroke="#000000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="
        468.81,1113.43 393.11,1215.59 468.81,1259.13 544.51,1215.59 468.81,1113.43 468.81,1259.13 	"/>
 </g>
-<g id="for_you">
-   <rect x="109.09" y="43.32" fill="none" width="717.82" height="148.14"/>
-   <text transform="matrix(1 0 0 1 159.7619 127.1088)"><tspan x="0" y="0" font-family="'SinhalaMN'" font-size="111px">stella </tspan><tspan x="305.2" y="0" font-family="'SinhalaMN'" font-size="111px">z</tspan><tspan x="364.03" y="0" font-family="'SinhalaMN'" font-size="111px" letter-spacing="-2">heng</tspan></text>
-   <rect x="1243.49" y="616.72" fill="none" width="2.59" height="0"/>
-</g>
+
 </svg>  
 </body>
 </html>
