--- a/p1/index.html
+++ b/p1/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>This is my project 1!</h1>
+    <h3>question mark</h3>
+    <h3>exclamation mark</h3>
+    <h3>apostrophe</h3>
+    <h3>period</h3>
+    <h3>colons</h3>
+    <h3>comma</h3>
+
     <a href="../index.html"><button>Class Website</button></a>
     
 </body>
