--- a/p1/index.html
+++ b/p1/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>This is my project 1!</h1>
-    <h3>question mark</h3>
-    <h3>exclamation mark</h3>
-    <h3>apostrophe</h3>
-    <h3>period</h3>
-    <h3>colons</h3>
-    <h3>comma</h3>
+    <a href="./question/index.html"><h3>question mark</h3></a>
+    <a href="./exclamation/index.html"><h3>exclamation mark</h3></a>
+    <a href="./apostrophe/index.html"><h3>apostrophe</h3></a>
+    <a href="./period/index.html"><h3>period</h3></a>
+    <a href="./colons/index.html"><h3>colons</h3></a>
+    <a href="./comma/index.html"><h3>comma</h3></a>
 
     <a href="../index.html"><button>Class Website</button></a>
     
