--- a/p1/index.html
+++ b/p1/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>On Punctuation</title>
 </head>
 <body>
-    <h1>This is my project 1!</h1>
+    <h1>ON PUNCTUATION</h1>
     <a href="./question/index.html"><h3>question mark</h3></a>
     <a href="./exclamation/index.html"><h3>exclamation mark</h3></a>
     <a href="./apostrophe/index.html"><h3>apostrophe</h3></a>
