--- a/p1/question/index.html
+++ b/p1/question/index.html
@@ -6,7 +6,25 @@
     <title>Question Marks</title>
 </head>
 <body>
-    <body>this will be the page on question marks</body>
+    There are some punctuations that are interesting and 
+    there are some punctuations that are not. Let us begin 
+    with the punctuations that are not. Of these the one 
+    but the first and the most the completely most uninteresting 
+    is the question mark. The question mark is alright when it is 
+    all alone when it is used as a brand on cattle or when it could be used 
+    in decoration but connected with writing it is completely entirely completely 
+    uninteresting. It is evident that is you ask a question you ask a
+    question but anybody who can read at all knows when a question
+    is a question as it is written in writing. Therefore I ask you 
+    therefore wherefore should one use the question mark. Beside 
+    it does not in its form go with ordinary printing and so it 
+    pleases neither the eye nor the ear and it is therefore like a noun,
+    just an unnecessary name of something. A question is a question, 
+    anybody can know that a question is a question and so why add to it
+    the question mark when it is already there when the question is 
+    already there in the writing. Therefore I never could bring myself
+    to use a question mark, I always found it positively revolting, 
+    and now very few do use it.
     <a href="../exclamation/index.html"><button>next</button></a>
 </body>
 </html>
