--- a/p1/index.html
+++ b/p1/index.html
@@ -10,7 +10,9 @@
     <title>On Punctuation</title>
 </head>
 <body>
+    <div id="box">
     <h1>ON PUNCTUATION</h1>
+    </div>
     <a href="./question/index.html"><h3>question mark</h3></a>
     <a href="./exclamation/index.html"><h3>exclamation mark</h3></a>
     <a href="./apostrophe/index.html"><h3>apostrophe</h3></a>
