--- a/p1/exclamation/index.html
+++ b/p1/exclamation/index.html
@@ -6,7 +6,23 @@
     <title>Exclamation Marks</title>
 </head>
 <body>
-    <body>this will be the page on exclamation marks</body>
+    Exclamation marks have the same difficulty and also quotation
+     marks, they are unnecessary, they are ugly, they spoil the
+    line of the writing or the printing and anyway what is the
+    use, if you do not know that a question is a question what
+    is the use of its being a question. The same thing is true
+    of a quotation. When I first began writing I found it simply
+    impossible to use question marks and quotation marks and 
+    exclamation points and now anybody sees it that way. Perhaps 
+    some day they will see it some other way but not at any rate 
+    anybody can and does see it that way. 
+<br><br>
+    So there are the uninteresting things in punctuation uninteresting 
+    in a way that is perfectly obvious, and so we do not have to go 
+    any farther into that. There are besides dashes and dots, and these 
+    might be interesting spaces might be interesting. They might if one 
+    felt that way about them.
+<br><br>
     <a href="../apostrophe/index.html"><button>next</button></a>
 </body>
 </html>
