--- a/p1/colons/index.html
+++ b/p1/colons/index.html
@@ -6,7 +6,10 @@
     <title>Colons</title>
 </head>
 <body>
-    <body>this will be the page on colons and semicolons</body>
+    You can see what an entirely different thing a period is from a comma, a colon or a semi-colon.
+<br><br>
+    There are two different way of thinking about colons and semicolons you can think of them as commas and as such they are purely servile or you can think of them as periods and then using them can make you feel adventurous I can see that one might feel about them as periods but I myself never have, I began unfortunately to feel them as a comma and commas are servile they have no life of their own they are dependent upon use and convenience and they are put there just for practical purposes. Semi-colons and colons had for me from the first completely this character the character that a comma has and not the character that a period has and therefore and definitely I have never used them. But now dimly and definitely I do see that they might well possibly they might have in them something of the character of the period and so it might have been an adventure to use them. I really do not think so. I think however lively they are or disguised they are they are definitely more comma than period and so really I cannot regret not having used them. They are more powerful more imposing more pretentious than a comma but they are a comma all the same. They really have within them deeply within them fundamentally within them the comma nature.
+    <br><br>
     <a href="../comma/index.html"><button>next</button></a>
 </body>
 </html>
