--- a/p1/index.html
+++ b/p1/index.html
@@ -13,12 +13,13 @@
     <div id="box">
     <h1>ON PUNCTUATION</h1>
     </div>
-    <a href="./question/index.html"><h3>question mark</h3></a>
-    <a href="./exclamation/index.html"><h3>exclamation mark</h3></a>
-    <a href="./apostrophe/index.html"><h3>apostrophe</h3></a>
-    <a href="./period/index.html"><h3>period</h3></a>
-    <a href="./colons/index.html"><h3>colons</h3></a>
-    <a href="./comma/index.html"><h3>comma</h3></a>
+
+    <a href="./question/index.html"><h3>?</h3></a>
+    <a href="./exclamation/index.html"><h3>!</h3></a>
+    <a href="./apostrophe/index.html"><h3>'</h3></a>
+    <a href="./period/index.html"><h3>.</h3></a>
+    <a href="./colons/index.html"><h3>;</h3></a>
+    <a href="./comma/index.html"><h3>,</h3></a>
 
     <a href="../index.html"><button>Class Website</button></a>
     
