--- a/p1/index.html
+++ b/p1/index.html
@@ -14,8 +14,12 @@
     <h1>ON PUNCTUATION</h1>
     </div>
 
-    <a href="./question/index.html"><h3>?</h3></a>
+    <div class="mark">
+        <a href="./question/index.html"><h3>?</h3></a>
+    </div>
+    <div class="exclam">
     <a href="./exclamation/index.html"><h3>!</h3></a>
+    </div>
     <a href="./apostrophe/index.html"><h3>'</h3></a>
     <a href="./period/index.html"><h3>.</h3></a>
     <a href="./colons/index.html"><h3>;</h3></a>
