--- a/p1/index.html
+++ b/p1/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./image/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>On Punctuation</title>
 </head>
 <body>
-    <div id="box">
-    <h1>ON PUNCTUATION</h1>
+    <div id="wrapper">
+        <div id="box">
+            <h1>ON PUNCTUATION_</h1>
+        </div>
     </div>
-
+    
     <div class="mark">
         <a href="./question/index.html"><h3>?</h3></a>
     </div>
@@ -26,6 +29,6 @@
     <a href="./comma/index.html"><h3>,</h3></a>
 
     <a href="../index.html"><button>Class Website</button></a>
-    
+-->
 </body>
 </html>
