--- a/p1/index.html
+++ b/p1/index.html
@@ -13,22 +13,21 @@
 <body>
     <div id="wrapper">
         <div id="box">
-            <h1>ON PUNCTUATION_</h1>
+            <h1>ON PUNCTUATION<span class="blink">_</span></h1>
         </div>
     </div>
     
-    <div class="mark">
+
         <a href="./question/index.html"><h3>?</h3></a>
-    </div>
-    <div class="exclam">
+
+
     <a href="./exclamation/index.html"><h3>!</h3></a>
-    </div>
+
     <a href="./apostrophe/index.html"><h3>'</h3></a>
     <a href="./period/index.html"><h3>.</h3></a>
     <a href="./colons/index.html"><h3>;</h3></a>
     <a href="./comma/index.html"><h3>,</h3></a>
-
     <a href="../index.html"><button>Class Website</button></a>
--->
+
 </body>
 </html>
