ending today's work!

--- a/p1/index.html
+++ b/p1/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./image/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>On Punctuation</title>
 </head>
@@ -15,6 +13,9 @@
         <div id="box">
             <h1>ON PUNCTUATION<span class="blink">_</span></h1>
         </div>
+    </div>
+    <div id="menu">
+        <h2>> start</h2>
     </div>
     
 
