--- a/p1/index.html
+++ b/p1/index.html
@@ -15,19 +15,11 @@
         </div>
     </div>
     <div id="menu">
-        <h2>> start</h2>
+        <a href="./selection/index.html"><h2>> start</h2></a>
     </div>
     
 
-        <a href="./question/index.html"><h3>?</h3></a>
-
-
-    <a href="./exclamation/index.html"><h3>!</h3></a>
-
-    <a href="./apostrophe/index.html"><h3>'</h3></a>
-    <a href="./period/index.html"><h3>.</h3></a>
-    <a href="./colons/index.html"><h3>;</h3></a>
-    <a href="./comma/index.html"><h3>,</h3></a>
+       
     <a href="../index.html"><button>Class Website</button></a>
 
 </body>
