--- a/p1/index.html
+++ b/p1/index.html
@@ -9,13 +9,11 @@
     <title>On Punctuation</title>
 </head>
 <body>
+    
     <div id="wrapper">
-        <div id="box">
+        <a href="./selection/index.html"><div id="box">
             <h1>ON PUNCTUATION<span class="blink">_</span></h1>
-        </div>
-    </div>
-    <div id="menu">
-        <a href="./selection/index.html"><h2>> start</h2></a>
+        </div></a>
     </div>
     
 
