--- a/p1/index.html
+++ b/p1/index.html
@@ -15,6 +15,10 @@
             <h1>ON PUNCTUATION<span class="blink">_</span></h1>
         </div></a>
     </div>
+    <div id="menu">
+        <h2>> Gertrude Stein</h2>
+    </div>
+
     
 
        
