--- a/p1/selection/apostrophe/index.html
+++ b/p1/selection/apostrophe/index.html
@@ -25,6 +25,8 @@
     it has come in. I cannot positively deny but that I do from time 
     to time let it come in.
     <br><br>
-    <a href="../period/index.html"><button>next</button></a>
+
+    <a href="../exclamation/index.html"><button><</button></a>
+    <a href="../period/index.html"><button>></button></a>
 </body>
 </html>
