--- a/p1/selection/exclamation/index.html
+++ b/p1/selection/exclamation/index.html
@@ -8,8 +8,9 @@
     <title>Exclamation Marks</title>
 </head>
 <body>
-    Exclamation marks have the same difficulty and also quotation
-     marks, they are unnecessary, they are ugly, they spoil the
+    <p>
+    Exclamation marks have the same difficulty and also quotation 
+    marks, they are unnecessary, they are ugly, they spoil the
     line of the writing or the printing and anyway what is the
     use, if you do not know that a question is a question what
     is the use of its being a question. The same thing is true
@@ -18,6 +19,7 @@
     exclamation points and now anybody sees it that way. Perhaps 
     some day they will see it some other way but not at any rate 
     anybody can and does see it that way. 
+    <p>
 <br><br>
     So there are the uninteresting things in punctuation uninteresting 
     in a way that is perfectly obvious, and so we do not have to go 
@@ -25,6 +27,7 @@
     might be interesting spaces might be interesting. They might if one 
     felt that way about them.
 <br><br>
-    <a href="../apostrophe/index.html"><button>next</button></a>
+    <a href="../question/index.html"><button><</button></a>
+    <a href="../apostrophe/index.html"><button>></button></a>
 </body>
 </html>
