--- a/p1/selection/period/index.html
+++ b/p1/selection/period/index.html
@@ -37,7 +37,7 @@
     Periods have a life of their own a necessity of their own a feeling of their own a time of their own. And that feeling that life that necessity that time can express itself in an infinite variety that is the reason that I have always remained true to periods so much so that as I say recently I have felt that one could need them more than one had ever needed them.
 
 <br><br>
-
-    <a href="../colons/index.html"><button>next</button></a>
+    <a href="../apostrophe/index.html"><button><</button></a>
+    <a href="../colons/index.html"><button>></button></a>
 </body>
 </html>
