--- a/p1/selection/question/index.html
+++ b/p1/selection/question/index.html
@@ -8,11 +8,17 @@
     <title>Question Marks</title>
 </head>
 <body>
-    There are some punctuations that are interesting and 
+    <div id="grid">
+    <div class="character">
+    <h1>?</h1>
+    </div>
+    <div class="box">
+    <!-- <p>There are some punctuations that are interesting and 
     there are some punctuations that are not. Let us begin 
-    with the punctuations that are not. Of these the one 
-    but the first and the most the completely most uninteresting 
-    is the question mark. The question mark is alright when it is 
+    with the punctuations that are not.</p> -->
+    
+   <p> Of these the one but the first and the most the completely most 
+    uninteresting is the question mark. The question mark is alright when it is 
     all alone when it is used as a brand on cattle or when it could be used 
     in decoration but connected with writing it is completely entirely completely 
     uninteresting. It is evident that is you ask a question you ask a
@@ -27,6 +33,10 @@
     already there in the writing. Therefore I never could bring myself
     to use a question mark, I always found it positively revolting, 
     and now very few do use it.
-    <a href="../exclamation/index.html"><button>next</button></a>
+    </p>
+    </div>
+    </div>
+    <a href="../comma/index.html"><button><</button></a>
+    <a href="../exclamation/index.html"><button>></button></a>
 </body>
 </html>
