--- a/p1/selection/index.html
+++ b/p1/selection/index.html
@@ -8,15 +8,23 @@
     <title>Selection</title>
 </head>
 <body>
-     <a href="./question/index.html"><h3>?</h3></a>
+    <div class="box">
+    <h2>There are some punctuations that are interesting and 
+        there are some punctuations that are not. Let us begin 
+        with the punctuations that are not.</h2>
+    </div>
 
+    <div class="uninteresting">
 
-    <a href="./exclamation/index.html"><h3>!</h3></a>
-
-    <a href="./apostrophe/index.html"><h3>'</h3></a>
+    <span class="1"><a href="./question/index.html"><h3>?</h3></a></span>
+    <span class="2"><a href="./exclamation/index.html"><h3>!</h3></a></span>
+    <span class="3"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
+    </div>
+    <div class="interesting">
     <a href="./period/index.html"><h3>.</h3></a>
     <a href="./colons/index.html"><h3>;</h3></a>
     <a href="./comma/index.html"><h3>,</h3></a>
+    </div>
     
 </body>
 </html>
