--- a/p1/selection/question/index.html
+++ b/p1/selection/question/index.html
@@ -36,7 +36,7 @@
     </p>
     </div>
     </div>
-    <a href="../comma/index.html"><button><</button></a>
+    <a href="../index.html"><button>home</button></a>
     <a href="../exclamation/index.html"><button>></button></a>
 </body>
 </html>
