--- a/p1/index.html
+++ b/p1/index.html
@@ -15,9 +15,9 @@
             <h1>ON PUNCTUATION<span class="blink">_</span></h1>
         </div></a>
     </div>
-    <div id="menu">
+    <!-- <div id="menu">
         <h2>> Gertrude Stein</h2>
-    </div>
+    </div> -->
 
     
 
