--- a/p1/selection/comma/index.html
+++ b/p1/selection/comma/index.html
@@ -26,6 +26,6 @@
     <br><br>
     So that is the way I felt about punctuation in prose, in poetry it is a little different but more so and later I will go into that. But that is the way I felt about punctuation in prose. 
     <br><br>
-    <a href="../index.html"><button>end</button></a>
+    <a href="../../index.html"><button>end</button></a>
 </body>
 </html>
