--- a/p1/selection/index.html
+++ b/p1/selection/index.html
@@ -20,6 +20,16 @@
     <span class="2"><a href="./exclamation/index.html"><h3>!</h3></a></span>
     <span class="3"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
     </div>
+
+    <div class="box">
+    <h2>So now to come to the real question of punctuation, 
+    periods, commas, colons, semi-colons and capitals 
+    and small letters. 
+
+    I have had a long and complicated life with all these. 
+    </h2>
+    </div>
+
     <div class="interesting">
     <a href="./period/index.html"><h3>.</h3></a>
     <a href="./colons/index.html"><h3>;</h3></a>
