--- a/p1/selection/period/index.html
+++ b/p1/selection/period/index.html
@@ -8,11 +8,11 @@
     <title>Period</title>
 </head>
 <body>
-    So now to come to the real question of punctuation, 
+    <!-- So now to come to the real question of punctuation, 
     periods, commas, colons, semi-colons and capitals 
     and small letters. 
 <br><br>
-    I have had a long and complicated life with all these. 
+    I have had a long and complicated life with all these.  -->
 <br><br>    
     Let us begin with these I use the least first and these 
     are colons and semi-colons, one might add to these commas.
