--- a/p1/selection/question/index.html
+++ b/p1/selection/question/index.html
@@ -11,12 +11,17 @@
     <div id="grid">
     <div class="character">
     <h1>?</h1>
+    <div class="stats">
+        <h3>appearance</h3>
+        <div class="bar1"></div>
+        <h3>usefulness</h3>
+        <div class="bar2"></div>
+        <h3>interest</h3>
+        <div class="bar3"></div>
+     </div> 
     </div>
+
     <div class="box">
-    <!-- <p>There are some punctuations that are interesting and 
-    there are some punctuations that are not. Let us begin 
-    with the punctuations that are not.</p> -->
-    
    <p> Of these the one but the first and the most the completely most 
     uninteresting is the question mark. The question mark is alright when it is 
     all alone when it is used as a brand on cattle or when it could be used 
