--- a/p1/selection/exclamation/index.html
+++ b/p1/selection/exclamation/index.html
@@ -8,6 +8,24 @@
     <title>Exclamation Marks</title>
 </head>
 <body>
+    <div id="grid">
+        <div class="character">
+        <h2> 
+            <a href="../question/index.html"><button><</button></a>
+            &nbsp;&nbsp; Exclamation Mark &nbsp;&nbsp;   
+            <a href="../apostrophe/index.html"><button>></button></a>
+        </h2>
+        <h1>!</h1>
+        <div class="stats">
+            <h3>appearance</h3>
+            <div class="bar1"></div>
+            <h3>usefulness</h3>
+            <div class="bar2"></div>
+            <h3>interest</h3>
+            <div class="bar3"></div>
+         </div> 
+        </div>
+    <div class="box">
     <p>
     Exclamation marks have the same difficulty and also quotation 
     marks, they are unnecessary, they are ugly, they spoil the
@@ -19,15 +37,13 @@
     exclamation points and now anybody sees it that way. Perhaps 
     some day they will see it some other way but not at any rate 
     anybody can and does see it that way. 
-    <p>
-<br><br>
     So there are the uninteresting things in punctuation uninteresting 
     in a way that is perfectly obvious, and so we do not have to go 
     any farther into that. There are besides dashes and dots, and these 
     might be interesting spaces might be interesting. They might if one 
     felt that way about them.
-<br><br>
-    <a href="../question/index.html"><button><</button></a>
-    <a href="../apostrophe/index.html"><button>></button></a>
+    </p>
+</div>
+</div>  
 </body>
 </html>
