--- a/p1/selection/question/index.html
+++ b/p1/selection/question/index.html
@@ -10,9 +10,12 @@
 <body>
     <div id="grid">
     <div class="character">
+    <h2> <a href="../index.html"><button><</button></a> 
+        &nbsp;&nbsp; Question Mark &nbsp;&nbsp;   
+        <a href="../exclamation/index.html"><button>></button></a></h2>
     <h1>?</h1>
     <div class="stats">
-        <h3>appearance</h3>
+        <h3>ugliness</h3>
         <div class="bar1"></div>
         <h3>usefulness</h3>
         <div class="bar2"></div>
@@ -28,12 +31,12 @@
     in decoration but connected with writing it is completely entirely completely 
     uninteresting. It is evident that is you ask a question you ask a
     question but anybody who can read at all knows when a question
-    is a question as it is written in writing. Therefore I ask you 
-    therefore wherefore should one use the question mark. Beside 
+    is a question as it is written in writing. <span class="red"> I ask you 
+    therefore wherefore should one use the question mark.</span> Beside 
     it does not in its form go with ordinary printing and so it 
     pleases neither the eye nor the ear and it is therefore like a noun,
     just an unnecessary name of something. A question is a question, 
-    anybody can know that a question is a question and so why add to it
+    <span class="red">anybody can know that a question is a question</span> and so why add to it
     the question mark when it is already there when the question is 
     already there in the writing. Therefore I never could bring myself
     to use a question mark, I always found it positively revolting, 
@@ -41,7 +44,6 @@
     </p>
     </div>
     </div>
-    <a href="../index.html"><button>home</button></a>
-    <a href="../exclamation/index.html"><button>></button></a>
+
 </body>
 </html>
