--- a/p1/selection/apostrophe/index.html
+++ b/p1/selection/apostrophe/index.html
@@ -8,7 +8,25 @@
     <title>Apostrophe</title>
 </head>
 <body>
-    One other little punctuation mark one can have feelings 
+    <div id="grid">
+        <div class="character">
+        <h2> 
+            <a href="../exclamation/index.html"><button><</button></a>
+            &nbsp;&nbsp; Apostrophe &nbsp;&nbsp;   
+            <a href="../period/index.html"><button>></button></a>
+        </h2>
+        <h1>'</h1>
+        <div class="stats">
+            <h3>appearance</h3>
+            <div class="bar1"></div>
+            <h3>usefulness</h3>
+            <div class="bar2"></div>
+            <h3>interest</h3>
+            <div class="bar3"></div>
+         </div> 
+        </div>
+        <div class="box">
+    <p>One other little punctuation mark one can have feelings 
     about and that is the apostrophe for possession. Well 
     feel as you like about that, I can see and I do see that 
     for many that for some the possessive case apostrophe has 
@@ -24,9 +42,8 @@
     do find myself letting it alone if it has come in and sometimes 
     it has come in. I cannot positively deny but that I do from time 
     to time let it come in.
-    <br><br>
-
-    <a href="../exclamation/index.html"><button><</button></a>
-    <a href="../period/index.html"><button>></button></a>
+</p>
+    </div>
+    </div>  
 </body>
 </html>
