--- a/p1/selection/exclamation/index.html
+++ b/p1/selection/exclamation/index.html
@@ -17,7 +17,7 @@
         </h2>
         <h1>!</h1>
         <div class="stats">
-            <h3>appearance</h3>
+            <h3>ugliness</h3>
             <div class="bar1"></div>
             <h3>usefulness</h3>
             <div class="bar2"></div>
@@ -28,8 +28,8 @@
     <div class="box">
     <p>
     Exclamation marks have the same difficulty and also quotation 
-    marks, they are unnecessary, they are ugly, they spoil the
-    line of the writing or the printing and anyway what is the
+    marks, <span class="red">they are unnecessary, they are ugly,</span> 
+    they spoil the line of the writing or the printing and anyway what is the
     use, if you do not know that a question is a question what
     is the use of its being a question. The same thing is true
     of a quotation. When I first began writing I found it simply
