--- a/p1/selection/index.html
+++ b/p1/selection/index.html
@@ -27,6 +27,9 @@
             and small letters. 
         
             I have had a long and complicated life with all these. 
+
+            Let us begin with these I use the least first and these 
+            are colons and semi-colons, one might add to these commas.
             </h2>
             </div>
 
