--- a/p1/interesting/period/index.html
+++ b/p1/interesting/period/index.html
@@ -11,7 +11,7 @@
     <div id="grid">
         <div class="character">
         <h2> 
-            <a href="../apostrophe/index.html"><button><</button></a>
+            <a href="../index.html"><button><</button></a>
             &nbsp;&nbsp; Period &nbsp;&nbsp;   
             <a href="../colons/index.html"><button>></button></a>
         </h2>
