--- a/p1/uninteresting/apostrophe/index.html
+++ b/p1/uninteresting/apostrophe/index.html
@@ -13,7 +13,7 @@
         <h2> 
             <a href="../exclamation/index.html"><button><</button></a>
             &nbsp;&nbsp; Apostrophe &nbsp;&nbsp;   
-            <a href="../period/index.html"><button>></button></a>
+            <a href="../../interesting/index.html"><button>></button></a>
         </h2>
         <h1>'</h1>
         <div class="stats">
