--- a/p1/uninteresting/index.html
+++ b/p1/uninteresting/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-    <title>Selection</title>
+    <title>Uninteresting</title>
 </head>
 <body>
     <div class="box">
@@ -21,23 +21,7 @@
     <span class="3"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
     </div>
 
-    <div class="box">
-        <h2>So now to come to the real question of punctuation, 
-            periods, commas, colons, semi-colons and capitals 
-            and small letters. 
-        
-            I have had a long and complicated life with all these. 
-
-            Let us begin with these I use the least first and these 
-            are colons and semi-colons, one might add to these commas.
-            </h2>
-            </div>
-
-    <div class="interesting">
-    <a href="./period/index.html"><h3>.</h3></a>
-    <a href="./colons/index.html"><h3>;</h3></a>
-    <a href="./comma/index.html"><h3>,</h3></a>
-    </div>
+   
     
 </body>
 </html>
