--- a/p1/index.html
+++ b/p1/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div id="wrapper">
-        <a href="./uninteresting/"><div id="box">
+        <a href="./uninteresting/index.html"><div id="box">
             <h1>ON PUNCTUATION<span class="blink">_</span></h1>
         </div></a>
     </div>
