--- a/p1/end/index.html
+++ b/p1/end/index.html
@@ -9,15 +9,11 @@
 </head>
 <body>
     <div class="box">
-        <h2>So now to come to the real question of punctuation, 
-        periods, commas, colons, semi-colons and capitals 
-        and small letters. 
-    
-        I have had a long and complicated life with all these. 
-
-        Let us begin with these I use the least first and these 
-        are colons and semi-colons, one might add to these commas.
+        <h2>So that is the way I felt about punctuation in prose, in poetry it is a little different but more so and later I will go into that. But that is the way I felt about punctuation in prose. 
         </h2>
     </div>
+    <div class="end">
+    <h1><a href=".././index.html"><button>end</button></a></h1>
+</div>
 </body>
 </html>
