--- a/p1/interesting/index.html
+++ b/p1/interesting/index.html
@@ -24,5 +24,8 @@
 <a href="./period/index.html"><h3>.</h3></a>
 <a href="./colons/index.html"><h3>;</h3></a>
 <a href="./comma/index.html"><h3>,</h3></a>
+
+<script src="script.js"></script>
+
 </body>
 </html>
