--- a/p1/uninteresting/exclamation/index.html
+++ b/p1/uninteresting/exclamation/index.html
@@ -43,6 +43,9 @@
     might be interesting spaces might be interesting. They might if one 
     felt that way about them.
     </p>
+
+    <script src="script.js"></script>
+    
 </div>
 </div>  
 </body>
