--- a/p1/uninteresting/apostrophe/index.html
+++ b/p1/uninteresting/apostrophe/index.html
@@ -17,7 +17,7 @@
         </h2>
         <h1>'</h1>
         <div class="stats">
-            <h3>appearance</h3>
+            <h3>ugliness</h3>
             <div class="bar1"></div>
             <h3>usefulness</h3>
             <div class="bar2"></div>
@@ -45,5 +45,7 @@
 </p>
     </div>
     </div>  
+    <script src="script.js"></script>
+
 </body>
 </html>
