--- a/p1/uninteresting/index.html
+++ b/p1/uninteresting/index.html
@@ -11,17 +11,16 @@
     <div class="box">
     <h2>There are some punctuations that are interesting and 
         there are some punctuations that are not. Let us begin 
-        with the punctuations that are not.</h2>
+        with the punctuations that are not. </h2>
     </div>
 
     <div class="uninteresting">
-
-    <span class="1"><a href="./question/index.html"><h3>?</h3></a></span>
-    <span class="2"><a href="./exclamation/index.html"><h3>!</h3></a></span>
-    <span class="3"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
+        <span class="question"><a href="./question/index.html"><h3>?</h3></a></span>
+        <span class="exclamation"><a href="./exclamation/index.html"><h3>!</h3></a></span>
+        <span class="apostrophe"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
     </div>
 
-   
+    <script src="script.js"></script>
     
 </body>
 </html>
