--- a/p1/index.html
+++ b/p1/index.html
@@ -19,7 +19,7 @@
         <h2>> Gertrude Stein</h2>
     </div> -->
 
-    
+    <!-- <script src="script.js"></script> -->
 
        
     <a href="../index.html"><button>Class Website</button></a>
