--- a/p1/end/index.html
+++ b/p1/end/index.html
@@ -15,5 +15,8 @@
     <div class="end">
     <h1><a href=".././index.html"><button>end</button></a></h1>
 </div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
