--- a/p1/uninteresting/question/index.html
+++ b/p1/uninteresting/question/index.html
@@ -14,14 +14,14 @@
         &nbsp;&nbsp; Question Mark &nbsp;&nbsp;   
         <a href="../exclamation/index.html"><button>></button></a></h2>
     <h1>?</h1>
-    <!-- <div class="stats">
+    <div class="stats">
         <h3>ugliness</h3>
         <div class="bar1"></div>
         <h3>usefulness</h3>
         <div class="bar2"></div>
         <h3>interest</h3>
         <div class="bar3"></div>
-     </div>  -->
+     </div> 
     </div>
 
     <div class="box">
@@ -45,7 +45,7 @@
     </div>
     </div>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 
 </body>
-</html>
+</html>s
