--- a/p1/interesting/colons/index.html
+++ b/p1/interesting/colons/index.html
@@ -18,12 +18,21 @@
         <h1>:</h1>
         <div class="stats">
             <h3>ugliness</h3>
-            <div class="bar1"></div>
+            <div class="bar1">
+                <div class="fill"></div>
+                <div class="border"></div>
+            </div>
             <h3>usefulness</h3>
-            <div class="bar2"></div>
+            <div class="bar2">
+            <div class="fill"></div>
+                <div class="border"></div>
+            </div>
             <h3>interest</h3>
-            <div class="bar3"></div>
+            <div class="bar3">
+                <div class="fill"></div>
+                <div class="border"></div>
          </div> 
+        </div>
         </div>
     <div class="box">
     <p>
