--- a/p1/uninteresting/question/index.html
+++ b/p1/uninteresting/question/index.html
@@ -16,12 +16,21 @@
     <h1>?</h1>
     <div class="stats">
         <h3>ugliness</h3>
-        <div class="bar1"></div>
+        <div class="bar1">
+            <div class="fill"></div>
+            <div class="border"></div>
+        </div>
         <h3>usefulness</h3>
-        <div class="bar2"></div>
+        <div class="bar2">
+        <div class="fill"></div>
+            <div class="border"></div>
+        </div>
         <h3>interest</h3>
-        <div class="bar3"></div>
+        <div class="bar3">
+            <div class="fill"></div>
+            <div class="border"></div>
      </div> 
+    </div>
     </div>
 
     <div class="box">
@@ -44,8 +53,6 @@
     </p>
     </div>
     </div>
-
-    <script src="script.js"></script>
 
 </body>
 </html>s
