--- a/p1/uninteresting/index.html
+++ b/p1/uninteresting/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="box">
-    <h2>There are some punctuations that are interesting and 
-        there are some punctuations that are not. Let us begin 
-        with the punctuations that are not. </h2>
+        <h2>There are some punctuations that are interesting and 
+            there are some punctuations that are not. Let us begin 
+            with the punctuations that are not. </h2>
     </div>
 
     <div class="uninteresting">
@@ -19,6 +19,11 @@
         <span class="exclamation"><a href="./exclamation/index.html"><h3>!</h3></a></span>
         <span class="apostrophe"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
     </div>
+
+    <a href="../index.html">
+    <button class="back">(B) back</button>
+    </a>
+    <button class="skip">(A) skip</button>
 
     <script src="script.js"></script>
     
