--- a/p1/interesting/index.html
+++ b/p1/interesting/index.html
@@ -24,6 +24,12 @@
 <a href="./period/index.html"><h3>.</h3></a>
 <a href="./colons/index.html"><h3>;</h3></a>
 <a href="./comma/index.html"><h3>,</h3></a>
+</div>
+
+<a href="../uninteresting/apostrophe/index.html">
+    <button class="back">(B) back</button>
+    </a>
+    <button class="skip">(A) skip</button>
 
 <script src="script.js"></script>
 
