--- a/p1/interesting/comma/index.html
+++ b/p1/interesting/comma/index.html
@@ -17,6 +17,7 @@
         </h2>
         <h1>,</h1>
         <div class="stats">
+            <div class="align">
             <h3>ugliness</h3>
             <div class="bar1">
                 <div class="fill"></div>
@@ -32,6 +33,7 @@
                 <div class="fill"></div>
                 <div class="border"></div>
          </div> 
+         </div>
         </div>
         </div>
     <div class="box">
