--- a/p1/uninteresting/question/index.html
+++ b/p1/uninteresting/question/index.html
@@ -15,6 +15,7 @@
         <a href="../exclamation/index.html"><button>></button></a></h2>
     <h1>?</h1>
     <div class="stats">
+        <div class="align">
         <h3>ugliness</h3>
         <div class="bar1">
             <div class="fill"></div>
@@ -30,6 +31,7 @@
             <div class="fill"></div>
             <div class="border"></div>
      </div> 
+    </div>
     </div>
     </div>
 
@@ -55,4 +57,4 @@
     </div>
 
 </body>
-</html>s
+</html>
