--- a/p1/uninteresting/exclamation/index.html
+++ b/p1/uninteresting/exclamation/index.html
@@ -17,6 +17,7 @@
         </h2>
         <h1>!</h1>
         <div class="stats">
+            <div class="align">
             <h3>ugliness</h3>
             <div class="bar1">
                 <div class="fill"></div>
@@ -31,6 +32,7 @@
             <div class="bar3">
                 <div class="fill"></div>
                 <div class="border"></div>
+         </div>
          </div> 
         </div>
         </div>
