--- a/p1/end/index.html
+++ b/p1/end/index.html
@@ -13,7 +13,7 @@
         </h2>
     </div>
     <div class="end">
-    <h1><a href=".././index.html"><button>stop</button></a></h1>
+    <h1><a href=".././index.html"><button>end</button></a></h1>
 </div>
 
 <script src="script.js"></script>
