--- a/p1/index.html
+++ b/p1/index.html
@@ -21,8 +21,9 @@
 
     <!-- <script src="script.js"></script> -->
 
-       
-    <a href="../index.html"><button>Class Website</button></a>
+    <div class="back">
+    <a href="../index.html"><button>(B) back</button></a>
+</div>
 
 </body>
 </html>
