--- a/p1/interesting/index.html
+++ b/p1/interesting/index.html
@@ -21,7 +21,7 @@
     </div>
 
 <div class="interesting">
-<a href="./period/index.html"><h3>.</h3></a>
+<a class="period" href="./period/index.html"><h3>.</h3></a>
 <a href="./colons/index.html"><h3>;</h3></a>
 <a href="./comma/index.html"><h3>,</h3></a>
 </div>
