--- a/p1/interesting/period/index.html
+++ b/p1/interesting/period/index.html
@@ -56,7 +56,8 @@
         <br>
         <br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        sometime and if one had to again and again <span class="stop">stop</span>
+        sometime and if one had to again and again 
+        <br><span class="stop">stop</span>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br> sometime and if one had to again and again
         <br> 
