--- a/p1/end/index.html
+++ b/p1/end/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="box">
-        <h2>So that is the way I felt about punctuation in prose, in poetry it is a little different but more so and later I will go into that. But that is the way I felt about punctuation in prose. 
+        <h2>So that is the way I felt about punctuation in prose, in poetry it is a little different but more so and later I will go into that. But that is the way I felt about punctuation in prose 
         </h2>
     </div>
     <div class="end">
