--- a/p1/interesting/comma/index.html
+++ b/p1/interesting/comma/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,53 +8,85 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>Comma</title>
 </head>
+
 <body>
     <div id="grid">
         <div class="character">
-        <h2> 
-            <a href="../colons/index.html"><button><</button></a>
-            &nbsp;&nbsp; Comma &nbsp;&nbsp;   
-            <a href="../../end/index.html"><button>></button></a>
-        </h2>
-        <h1>,</h1>
-        <div class="stats">
-            <div class="align">
-            <h3>ugliness</h3>
-            <div class="bar1">
-                <div class="fill"></div>
-                <div class="border"></div>
+            <h2>
+                <a href="../colons/index.html"><button>&lt;</button></a>
+                &nbsp;&nbsp; Comma &nbsp;&nbsp;
+                <a href="../../end/index.html"><button>></button></a>
+            </h2>
+            <h1>,</h1>
+            <div class="stats">
+                <div class="align">
+                    <h3>ugliness</h3>
+                    <div class="bar1">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                    <h3>usefulness</h3>
+                    <div class="bar2">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                    <h3>interest</h3>
+                    <div class="bar3">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                </div>
             </div>
-            <h3>usefulness</h3>
-            <div class="bar2">
-            <div class="fill"></div>
-                <div class="border"></div>
-            </div>
-            <h3>interest</h3>
-            <div class="bar3">
-                <div class="fill"></div>
-                <div class="border"></div>
-         </div> 
-         </div>
         </div>
-        </div>
-    <div class="box">
-        <p>
-    And now what does a comma do and what has it to do and why do I feel as I do about them.
+        <div class="box">
+            <p>
+                And now what does a comma do and what has it to do and why do I feel as I do about them.
 
-    What does a comma do.
+                What does a comma do.
 
-    I have refused them so often and left the out so much and did without them so continually that I have come finally to be indifferent to them. I do not now care whether you put them in or not but for a long time I felt very definitely about them and would have nothing to do with them.
-  <br>
-    <span class="red">As I say commas are servile and they have no life of their own,</span> and their use is not a use, it is a way of replacing one’s own interest and I do decidedly like to like my own interest my own interest in what I am doing. A comma by helping you along holding your coat for you and putting on your shoes keeps you from living your life as actively as you should lead it and to me for many years and I still do feel that way about it only now I do not pay as much attention to them, the use of them was positively degrading. Let me tell you what I feel and what I mean and what I felt and what I meant.
-   <br>
-    When I was writing those long sentences of The Making of Americans, verbs active present verbs with long dependent adverbial clauses became a passion with me. I have told you that I recognize verbs and adverbs aided by prepositions and conjunctions with pronouns as possessing the whole of the active life of writing. 
-    <br>
-    Complications make eventually for simplicity and therefore I have always liked dependent adverbial clauses. I have like dependent adverbial clauses because of their variety of dependence and independence. You can see how loving the intensity of complication of these things that commas would be degrading. <span class="red">Why if you want the pleasure of concentrating on the final simplicity of excessive complication would you want any artificial aid to bring about that simplicity.</span> Do you see now why I feel about that simplicity. Do you see now why I feel about the comma as I did and as I do.
-    <br>
-    Think about anything you really like to do and you will see what I mean.
-    
-    When it gets really difficult you want to disentangle rather than to cut the knot, at least of anybody feels who is working with any thread, so anybody feels who is working with any tool so anybody feels who is writing any sentence or reading it after it has been written. <span class="red">>And what does a comma do, a comma does nothing but make easy a thing that if you like it enough is easy enough without the comma.</span> A long complicated sentence should force itself upon you, make you know yourself knowing it and the comma, well at the most a comma is a poor period that lets you stop and take a breath but if you want to take a breath you ought to know yourself that you want to take a breath. It is not like stopping altogether has something to do with going on, but taking a breath well you are always taking a breath and why emphasize one breath rather than another breath. Anyway that is the way I felt about it and I felt that about it very very strongly. And so I almost never used a comma. The longer, the more complicated the sentence the greater the number of the same kinds of words I had following one after another, the more the very more I had of them the more I felt the passionate need of their taking care of themselves by themselves and not helping them, and thereby enfeebling them by putting in a comma.
-    </p>
-    
+                I have refused them so often and left the out so much and did without them so continually that I have
+                come finally to be indifferent to them. I do not now care whether you put them in or not but for a long
+                time I felt very definitely about them and would have nothing to do with them.
+                <br>
+                <span class="red">As I say commas are servile and they have no life of their own,</span> and their use
+                is not a use, it is a way of replacing one’s own interest and I do decidedly like to like my own
+                interest my own interest in what I am doing. A comma by helping you along holding your coat for you and
+                putting on your shoes keeps you from living your life as actively as you should lead it and to me for
+                many years and I still do feel that way about it only now I do not pay as much attention to them, the
+                use of them was positively degrading. Let me tell you what I feel and what I mean and what I felt and
+                what I meant.
+                <br>
+                When I was writing those long sentences of The Making of Americans, verbs active present verbs with long
+                dependent adverbial clauses became a passion with me. I have told you that I recognize verbs and adverbs
+                aided by prepositions and conjunctions with pronouns as possessing the whole of the active life of
+                writing.
+                <br>
+                Complications make eventually for simplicity and therefore I have always liked dependent adverbial
+                clauses. I have like dependent adverbial clauses because of their variety of dependence and
+                independence. You can see how loving the intensity of complication of these things that commas would be
+                degrading. <span class="red">Why if you want the pleasure of concentrating on the final simplicity of
+                    excessive complication would you want any artificial aid to bring about that simplicity.</span> Do
+                you see now why I feel about that simplicity. Do you see now why I feel about the comma as I did and as
+                I do.
+                <br>
+                Think about anything you really like to do and you will see what I mean.
+
+                When it gets really difficult you want to disentangle rather than to cut the knot, at least of anybody
+                feels who is working with any thread, so anybody feels who is working with any tool so anybody feels who
+                is writing any sentence or reading it after it has been written. <span class="red">And what does a comma
+                    do, a comma does nothing but make easy a thing that if you like it enough is easy enough without the
+                    comma.</span> A long complicated sentence should force itself upon you, make you know yourself
+                knowing it and the comma, well at the most a comma is a poor period that lets you stop and take a breath
+                but if you want to take a breath you ought to know yourself that you want to take a breath. It is not
+                like stopping altogether has something to do with going on, but taking a breath well you are always
+                taking a breath and why emphasize one breath rather than another breath. Anyway that is the way I felt
+                about it and I felt that about it very very strongly. And so I almost never used a comma. The longer,
+                the more complicated the sentence the greater the number of the same kinds of words I had following one
+                after another, the more the very more I had of them the more I felt the passionate need of their taking
+                care of themselves by themselves and not helping them, and thereby enfeebling them by putting in a
+                comma.
+            </p>
+
 </body>
+
 </html>
