--- a/p1/uninteresting/question/index.html
+++ b/p1/uninteresting/question/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,54 +8,57 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>Question Marks</title>
 </head>
+
 <body>
     <div id="grid">
-    <div class="character">
-    <h2> <a href="../index.html"><button><</button></a> 
-        &nbsp;&nbsp; Question Mark &nbsp;&nbsp;   
-        <a href="../exclamation/index.html"><button>></button></a></h2>
-    <h1>?</h1>
-    <div class="stats">
-        <div class="align">
-        <h3>ugliness</h3>
-        <div class="bar1">
-            <div class="fill"></div>
-            <div class="border"></div>
+        <div class="character">
+            <h2> <a href="../index.html"><button>&lt;</button></a>
+                &nbsp;&nbsp; Question Mark &nbsp;&nbsp;
+                <a href="../exclamation/index.html"><button>></button></a>
+            </h2>
+            <h1>?</h1>
+            <div class="stats">
+                <div class="align">
+                    <h3>ugliness</h3>
+                    <div class="bar1">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                    <h3>usefulness</h3>
+                    <div class="bar2">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                    <h3>interest</h3>
+                    <div class="bar3">
+                        <div class="fill"></div>
+                        <div class="border"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <h3>usefulness</h3>
-        <div class="bar2">
-        <div class="fill"></div>
-            <div class="border"></div>
-        </div>
-        <h3>interest</h3>
-        <div class="bar3">
-            <div class="fill"></div>
-            <div class="border"></div>
-     </div> 
-    </div>
-    </div>
-    </div>
 
-    <div class="box">
-   <p> Of these the one but the first and the most the completely most 
-    uninteresting is the question mark. The question mark is alright when it is 
-    all alone when it is used as a brand on cattle or when it could be used 
-    in decoration but connected with writing it is completely entirely completely 
-    uninteresting. It is evident that is you ask a question you ask a
-    question but anybody who can read at all knows when a question
-    is a question as it is written in writing. <span class="red"> I ask you 
-    therefore wherefore should one use the question mark.</span> Beside 
-    it does not in its form go with ordinary printing and so it 
-    pleases neither the eye nor the ear and it is therefore like a noun,
-    just an unnecessary name of something. A question is a question, 
-    <span class="red">anybody can know that a question is a question</span> and so why add to it
-    the question mark when it is already there when the question is 
-    already there in the writing. Therefore I never could bring myself
-    to use a question mark, I always found it positively revolting, 
-    and now very few do use it.
-    </p>
-    </div>
+        <div class="box">
+            <p> Of these the one but the first and the most the completely most
+                uninteresting is the question mark. The question mark is alright when it is
+                all alone when it is used as a brand on cattle or when it could be used
+                in decoration but connected with writing it is completely entirely completely
+                uninteresting. It is evident that is you ask a question you ask a
+                question but anybody who can read at all knows when a question
+                is a question as it is written in writing. <span class="red"> I ask you
+                    therefore wherefore should one use the question mark.</span> Beside
+                it does not in its form go with ordinary printing and so it
+                pleases neither the eye nor the ear and it is therefore like a noun,
+                just an unnecessary name of something. A question is a question,
+                <span class="red">anybody can know that a question is a question</span> and so why add to it
+                the question mark when it is already there when the question is
+                already there in the writing. Therefore I never could bring myself
+                to use a question mark, I always found it positively revolting,
+                and now very few do use it.
+            </p>
+        </div>
     </div>
 
 </body>
+
 </html>
