--- a/p1/uninteresting/index.html
+++ b/p1/uninteresting/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>Uninteresting</title>
 </head>
+
 <body>
     <div class="box">
-        <h2>There are some punctuations that are interesting and 
-            there are some punctuations that are not. Let us begin 
+        <h2>There are some punctuations that are interesting and
+            there are some punctuations that are not. Let us begin
             with the punctuations that are not. </h2>
     </div>
 
     <div class="uninteresting">
-        <span class="question"><a href="./question/index.html"><h3>?</h3></a></span>
-        <span class="exclamation"><a href="./exclamation/index.html"><h3>!</h3></a></span>
-        <span class="apostrophe"><a href="./apostrophe/index.html"><h3>'</h3></a></span>
+        <span class="question"><a href="./question/index.html">
+                <h3>?</h3>
+            </a></span>
+        <span class="exclamation"><a href="./exclamation/index.html">
+                <h3>!</h3>
+            </a></span>
+        <span class="apostrophe"><a href="./apostrophe/index.html">
+                <h3>'</h3>
+            </a></span>
     </div>
 
     <a href="../index.html">
-    <button class="back">(B) back</button>
+        <button class="back">(B) back</button>
     </a>
     <button class="skip">(A) skip</button>
 
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
