--- a/p2/index.html
+++ b/p2/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;1,300&family=Inter:wght@100..900&display=swap"
+        rel="stylesheet">
     <title>Project 2</title>
 </head>
+
 <body>
-    <h1>This is my project 2!</h1>
-    <a href="../index.html"><button>Class Website</button></a>
-    
+    <h3>an ode</div>
+    </h3>
+    <h1>on manifestation, gratitude and appreciation</h1>
+    <p>a wishlist project inspired by noa goffer, a reclamation of ownership through creativity adoration and of the
+        object, a sincere recollection of things i cherish (parasocially)</p>
+    <a href="../index.html"><button>back</button></a>
+
 </body>
+
 </html>
