--- a/index.html
+++ b/index.html
@@ -249,27 +249,27 @@
                 </g>
             </g>
         </a>
-        <!-- <a href="./p2/index.html" title="link to project 2"> -->
-        <g id="tulip2">
+        <a href="./p2/index.html" title="link to project 2">
+            <g id="tulip2">
 
-            <polygon fill="#DBC0BA" points="369.15,551 404.87,568.55 401.95,571.86 	" />
-            <g>
-                <polygon fill="#DEE9CA" stroke="#D2DDBC" stroke-miterlimit="10" points="475.42,734.98 537.92,947.97 559.4,941.4 500.33,738.43 
+                <polygon fill="#DBC0BA" points="369.15,551 404.87,568.55 401.95,571.86 	" />
+                <g>
+                    <polygon fill="#DEE9CA" stroke="#D2DDBC" stroke-miterlimit="10" points="475.42,734.98 537.92,947.97 559.4,941.4 500.33,738.43 
            475.02,733.89 		" />
-                <polygon fill="#F8DAD4" stroke="#C88F8C" stroke-miterlimit="10"
-                    points="423.06,553.01 454.7,517.99 493.11,554.83 
+                    <polygon fill="#F8DAD4" stroke="#C88F8C" stroke-miterlimit="10"
+                        points="423.06,553.01 454.7,517.99 493.11,554.83 
            499.67,556.66 565.7,643.85 536.52,679.96 509.89,740.15 444.95,728.48 381.11,722.64 387.68,595.33 372.36,553.01 		" />
-                <polygon fill="#C88F8C" points="422,554.83 489.99,554.83 463.08,598.39 459.89,613.61 453.77,602.28 395.61,589.18 
+                    <polygon fill="#C88F8C" points="422,554.83 489.99,554.83 463.08,598.39 459.89,613.61 453.77,602.28 395.61,589.18 
            389.07,592.01 		" />
-                <polygon fill="#C88F8C" points="454.7,517.99 449.53,554.83 458.84,554.83 		" />
-                <polygon fill="#C88F8C" points="393.05,596.25 420.03,604.93 449.53,604.93 419.56,607.1 		" />
-                <polygon fill="#C88F8C" points="391.78,597.7 438.35,709.99 435.83,714.89 		" />
-                <line fill="#C88F8C" stroke="#C88F8C" stroke-miterlimit="10" x1="461.02" y1="618.25" x2="437.82"
-                    y2="709.99" />
-                <polygon fill="#C88F8C" points="467.47,601.68 499.67,556.66 505.54,564.41 		" />
-                <polygon fill="#DEAAA1" points="486.51,596.25 535.44,682.39 536.52,679.96 		" />
+                    <polygon fill="#C88F8C" points="454.7,517.99 449.53,554.83 458.84,554.83 		" />
+                    <polygon fill="#C88F8C" points="393.05,596.25 420.03,604.93 449.53,604.93 419.56,607.1 		" />
+                    <polygon fill="#C88F8C" points="391.78,597.7 438.35,709.99 435.83,714.89 		" />
+                    <line fill="#C88F8C" stroke="#C88F8C" stroke-miterlimit="10" x1="461.02" y1="618.25" x2="437.82"
+                        y2="709.99" />
+                    <polygon fill="#C88F8C" points="467.47,601.68 499.67,556.66 505.54,564.41 		" />
+                    <polygon fill="#DEAAA1" points="486.51,596.25 535.44,682.39 536.52,679.96 		" />
+                </g>
             </g>
-        </g>
         </a>
         <g id="bouquet">
             <polygon fill="#FFFFFF" points="471.81,731.88 185.9,694.82 293.57,832.82 468.81,1113.43 637.55,863.32 653.38,800.54 
