--- a/p2/index.html
+++ b/p2/index.html
@@ -17,19 +17,23 @@
 <body>
     <h3>an ode</div>
     </h3>
-    <h1>on manifestation, gratitude and appreciation</h1>
+    <div id="introduction">
+        <h1>an ode to yearned objects</h1>
+        <h2>on manifestation, gratitude and appreciation</h2>
+    </div>
     <p>a wishlist project inspired by noa goffer, a reclamation of ownership through creativity adoration and of the
         object, a sincere recollection of things i cherish</p>
     <div id="controls">
         <div class="row-flexbox">
-            <label for="type-filter">ode:</label>
+            <label for="type-filter">yearning for:</label>
             <select id="type-filter">
-                <option value="all">yearning for</option>
+                <option value="all">everything</option>
                 <option value="accessory">accessory</option>
-                <option value="clothing">clothing</option>
                 <option value="ceramic">ceramics</option>
+                <option value="music">music</option>
                 <option value="home">home</option>
                 <option value="shoe">shoes</option>
+
             </select>
         </div>
         <!-- <div class="row-flexbox">
@@ -39,7 +43,9 @@
         </div> -->
     </div>
     <div id="toolbox"></div>
-    <a href="../index.html"><button>back</button></a>
+    <a href="../index.html">
+        <button>return</button>
+    </a>
 
 </body>
 
