--- a/p2/index.html
+++ b/p2/index.html
@@ -24,11 +24,20 @@
         <div id="landing">
             <h1>an ode to yearned objects</h1>
             <div class="description">
-                <p>on manifestation, gratitude and appreciation. a wishlist project inspired by <a
-                        href="https://noagoffer.com/the-wishlist">noa goffer</a>, a
-                    reclamation of ownership through creative adoration of the object in a sincere recollection of
-                    things
-                    i cherish.</p>
+                <p>
+                    there is something truly special in the value we give to the objects we sincerely
+                    love.
+                    feeling an
+                    object, physically, tangibly, in the palm of your hands, fosters a connection between you, the
+                    earth, and it’s maker. an object is more than an object, it is a fundamental instrument of love.
+                    objects can transfer intentions to people, and give them strength like a lucky charm.
+
+                    more than something to be owned, more than something to be admired, i feel the creation of an object
+                    is an ode to someone’s hard efforts, and it’s yearning a testament to it’s lover’s self identity.
+
+                    <br><br>
+                    a wishlist project inspired by <a href="https://noagoffer.com/the-wishlist">noa goffer</a>.
+                </p>
             </div>
         </div>
 
