--- a/p2/index.html
+++ b/p2/index.html
@@ -29,11 +29,11 @@
                     love.
                     feeling an
                     object, physically, tangibly, in the palm of your hands, fosters a connection between you, the
-                    earth, and it’s maker. an object is more than an object, it is a fundamental instrument of love.
+                    earth, and its maker. an object is more than an object, it is a fundamental instrument of love.
                     objects can transfer intentions to people, and give them strength like a lucky charm.
 
                     more than something to be owned, more than something to be admired, i feel the creation of an object
-                    is an ode to someone’s hard efforts, and it’s yearning a testament to it’s lover’s self identity.
+                    is an ode to someone’s hard efforts, and its yearning a testament to its lover’s self identity.
 
                     <br><br>
                     a wishlist project inspired by <a href="https://noagoffer.com/the-wishlist">noa goffer</a>.
